@@ -1,0 +1,170 @@
+# Doxyfile 1.3.4
+#
+# $Id$
+#
+PROJECT_NAME          = DAnCE
+PROJECT_NUMBER        = Snapshot
+OUTPUT_DIRECTORY      = .
+OUTPUT_LANGUAGE       = English
+DISABLE_INDEX         = NO
+EXTRACT_ALL           = YES
+EXTRACT_PRIVATE       = YES
+EXTRACT_STATIC        = YES
+HIDE_UNDOC_MEMBERS    = NO
+HIDE_UNDOC_CLASSES    = NO
+BRIEF_MEMBER_DESC     = YES
+REPEAT_BRIEF          = YES
+ALWAYS_DETAILED_SEC   = NO
+FULL_PATH_NAMES       = NO
+STRIP_FROM_PATH       =
+INTERNAL_DOCS         = YES
+CLASS_DIAGRAMS        = YES
+SOURCE_BROWSER        = YES
+INLINE_SOURCES        = YES
+STRIP_CODE_COMMENTS   = NO
+CASE_SENSE_NAMES      = YES
+HIDE_SCOPE_NAMES      = NO
+VERBATIM_HEADERS      = YES
+SHOW_INCLUDE_FILES    = YES
+JAVADOC_AUTOBRIEF     = NO
+INHERIT_DOCS          = YES
+INLINE_INFO           = YES
+SORT_MEMBER_DOCS      = YES
+DISTRIBUTE_GROUP_DOC  = YES
+TAB_SIZE              = 8
+ENABLED_SECTIONS      =
+
+#---------------------------------------------------------------------------
+# configuration options related to warning and progress messages
+#---------------------------------------------------------------------------
+
+QUIET                 = YES
+WARNINGS              = NO
+WARN_IF_UNDOCUMENTED  = YES
+WARN_FORMAT           = "$file:$line: $text"
+
+#---------------------------------------------------------------------------
+# configuration options related to the input files
+#---------------------------------------------------------------------------
+
+INPUT                 = TAO/CIAO/DAnCE
+FILE_PATTERNS         = *.cpp *.h *.i *.inl *.pidl *.txt *.idl
+RECURSIVE             =
+EXCLUDE               =
+EXCLUDE_PATTERNS      =
+EXAMPLE_PATH          =
+EXAMPLE_PATTERNS      =
+IMAGE_PATH            =
+INPUT_FILTER          =
+
+#---------------------------------------------------------------------------
+# configuration options related to the alphabetical class index
+#---------------------------------------------------------------------------
+
+ALPHABETICAL_INDEX    = YES
+COLS_IN_ALPHA_INDEX   = 1
+IGNORE_PREFIX         =
+
+#---------------------------------------------------------------------------
+# configuration options related to the HTML output
+#---------------------------------------------------------------------------
+
+GENERATE_HTML         = YES
+HTML_OUTPUT           = html/tao/ciao/dance
+HTML_HEADER           =
+HTML_FOOTER           =
+HTML_STYLESHEET       =
+HTML_ALIGN_MEMBERS    = YES
+GENERATE_HTMLHELP     = NO
+
+#---------------------------------------------------------------------------
+# configuration options related to the LaTeX output
+#---------------------------------------------------------------------------
+
+GENERATE_LATEX        = NO
+LATEX_OUTPUT          = latex
+COMPACT_LATEX         = NO
+PAPER_TYPE            = a4wide
+EXTRA_PACKAGES        =
+LATEX_HEADER          =
+PDF_HYPERLINKS        = NO
+LATEX_BATCHMODE       = NO
+
+#---------------------------------------------------------------------------
+# configuration options related to the RTF output
+#---------------------------------------------------------------------------
+
+GENERATE_RTF          = NO
+RTF_OUTPUT            = rtf
+COMPACT_RTF           = NO
+RTF_HYPERLINKS        = NO
+RTF_STYLESHEET_FILE   =
+
+#---------------------------------------------------------------------------
+# configuration options related to the man page output
+#---------------------------------------------------------------------------
+
+GENERATE_MAN          = NO
+MAN_OUTPUT            = man
+MAN_EXTENSION         = .3
+
+#---------------------------------------------------------------------------
+# Configuration options related to the preprocessor
+#---------------------------------------------------------------------------
+
+ENABLE_PREPROCESSING  = YES
+MACRO_EXPANSION       = YES
+EXPAND_ONLY_PREDEF    = YES
+SEARCH_INCLUDES       = YES
+INCLUDE_PATH          = TAO . ACEXML TAO/tao/IORTable TAO/CIAO/tools/XML_Helpers
+PREDEFINED            =
+EXPAND_AS_DEFINED     = ACE_RCSID \
+			ACE_UNIMPLEMENTED_FUNC \
+                        ACE_CACHE_MAP_MANAGER \
+                        ACE_THROW_SPEC \
+                        TAO_NAMESPACE \
+                        CIAO_NAMESPACE
+
+#---------------------------------------------------------------------------
+# Configuration::addtions related to external references
+#---------------------------------------------------------------------------
+
+TAGFILES              = html/ace/ACE.tag=../../../../ace \
+                        html/tao/TAO.tag=../../.. \
+                        html/ace/ssl/ACE_SSL.tag=../../../../ace/ssl \
+                        html/tao/portableserver/TAO_PortableServer.tag=../../../portableserver \
+                        html/tao/iortable/TAO_IORTable.tag=../../../iortable \
+                        html/tao/rtcorba/TAO_RTCORBA.tag=../../../rtcorba \
+                        html/tao/security/TAO_Security.tag=../../../security \
+                        html/acexml/ACEXML.tag=../../../../acexml \
+                        html/tao/rtportableserver/TAO_RTPortableServer.tag=../../../rtportableserver \
+                        html/tao/cosnaming/TAO_CosNaming.tag=../../../cosnaming \
+                        html/tao/ifr/TAO_IFR.tag=../../../ifr
+GENERATE_TAGFILE      = html/tao/ciao/DAnCE.tag
+ALLEXTERNALS          = NO
+PERL_PATH             = /usr/bin/perl
+
+#---------------------------------------------------------------------------
+# Configuration options related to the dot tool
+#---------------------------------------------------------------------------
+
+# If you set the HAVE_DOT tag to YES then doxygen will assume the dot tool is
+# available from the path. This tool is part of Graphviz
+
+HAVE_DOT              = YES
+CLASS_GRAPH           = YES
+COLLABORATION_GRAPH   = YES
+INCLUDE_GRAPH         = YES
+INCLUDED_BY_GRAPH     = YES
+GRAPHICAL_HIERARCHY   = YES
+# The tag DOT_PATH can be used to specify the path where the dot tool can be
+# found. If left blank, it is assumed the dot tool can be found on the path.
+DOT_PATH              =
+MAX_DOT_GRAPH_WIDTH   = 1024
+MAX_DOT_GRAPH_HEIGHT  = 1024
+
+#---------------------------------------------------------------------------
+# Configuration::addtions related to the search engine
+#---------------------------------------------------------------------------
+
+SEARCHENGINE          = NO
