@@ -196,6 +196,11 @@
       <LI><P><A HREF="tao/ciao/tools/xml_helpers/index.html">XML_HELPERS: </A>
 	  XML helper classes to aid the parsing and manupilation of XML files.
 	</P>
+	</P>
+      </LI>
+      <LI><P><A HREF="tao/ciao/DAnCE/index.html">DAnCE: </A>
+	  CIAO's Deployment and Configuration Engine.
+	</P>	
       </LI>
     </UL>
 
