@@ -1,3 +1,9 @@
+Sun Jul  10 23:24:12 UTC 2005  Gan Deng  <gan.deng@vanderbilt.edu>
+
+        * etc/DAnCE.doxygen:
+          
+	  Added doxygen configuration file for DAnCE.
+
 Sat Jul  9 06:24:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/OS_NS_Thread.h:
